<resources>
    <string name="app_name">Qurba</string>
    <string name="default_city">Alexandria</string>
    <string name="trending">Trending</string>
    <string name="nearby">Places</string>
    <string name="near">Near, </string>
    <string name="offers">Offers</string>
    <string name="restaurants">Restaurants</string>
    <string name="offer_type">Offer Type</string>
    <string name="products">Products</string>
    <string name="profile">Profile</string>
    <string name="places_search_hint">What are you looking for?</string>
    <string name="places_search_by_name_hint">Search by Place name</string>
    <string name="areas_search_by_name_hint">Search area</string>
    <string name="view_all_comments">View All Comments</string>
    <string name="view_all_offers_at">View All Offers at</string>
    <string name="view_menu">View Menu</string>
    <string name="view">View</string>
    <string name="replies">Replies</string>
    <string name="more_replies">more replies</string>
    <string name="percentage">%</string>
    <string name="view_order_details">View Order Details</string>
    <string name="offer_description">Offer Description</string>
    <string name="products_and_services">Products and Services </string>
    <string name="product_description">Meal Description</string>
    <string name="product_customization">Meal Customizations</string>
    <string name="see_others_saying">See what others are saying</string>
    <string name="place_info">Restaurant Info</string>
    <string name="similar_places">Similar Restaurants</string>
    <string name="be_first_to_rate">Be the first to rate</string>
    <string name="be_first_to_comment">Be the first to comment</string>
    <string name="view_previous_comments">View recent comments</string>
    <string name="offers_search_hint">Search by offer name</string>
    <string name="search_location_hint">Search in specific location</string>
    <string name="follow">Follow</string>
    <string name="show_results">Show results</string>
    <string name="following">Following</string>
    <string name="see_all_reviews">See all reviews</string>
    <string name="view_all_reviews">View all reviews</string>
    <string name="view_all_images">View all images</string>
    <string name="see_all_places">See all places</string>
    <string name="featured">Featured</string>
    <string name="featured_places">Featured Restaurants</string>
    <string name="_new">New</string>
    <string name="became_trendy">Became trendy</string>
    <string name="most_reviewed">Most reviewed</string>
    <string name="recently_joined">Recently joined</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="profile_updated_success">Profile successfully updated</string>
    <string name="retry">Retry</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="sort_by">Sort by</string>
    <string name="places">Places</string>
    <string name="place">Place</string>
    <string name="search_this_area">Search this area</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="open_time">Open time</string>
    <string name="about">About</string>
    <string name="nearby_landmarks">Nearby landmarks</string>
    <string name="nearby_garages">Nearby garages</string>
    <string name="open_now">Open now</string>
    <string name="open_at">Opens at</string>
    <string name="other_branches">Other branches</string>
    <string name="phone_number">Phone number</string>
    <string name="land_line">Land line</string>
    <string name="phone">Phone</string>
    <string name="hash_tags">Hashtags</string>
    <string name="facilities">Facilities</string>
    <string name="gallery">Gallery</string>
    <string name="info">INFO</string>
    <string name="categories">Categories</string>
    <string name="reviews">Reviews</string>
    <string name="menu">Menu</string>
    <string name="get_directions">Get directions</string>
    <string name="write_review">Write a review</string>
    <string name="share">Share</string>
    <string name="commnt">Comment</string>
    <string name="label_ur_address">label your address</string>
    <string name="other_address_hint">eg. beside pharmacy</string>
    <string name="excellent">Excellent</string>
    <string name="very_good">Very good</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="poor">Poor</string>
    <string name="rated">Rated</string>
    <string name="failed_update_pp">Failed to update the new profile picture. Please try again.</string>
    <string name="failed_image_invalid_path">Image path not valid. Please choose a valid image.</string>
    <string name="something_wrong">Something went wrong. Please try again.</string>
    <string name="trending_hashtags">Trending Hashtags</string>
    <string name="recent_searches">Recent searches</string>
    <string name="no_locations_found">No locations found</string>
    <string name="no_places_found">No places found</string>
    <string name="no_offers_found">No offers found</string>
    <string name="zero">0</string>
    <string name="update_item_qty_failed">Can\'t update this item quanitity</string>
    <string name="all_reviews">All reviews</string>
    <string name="write_a_review">Write a review</string>
    <string name="post">POST</string>
    <string name="clear_all">Clear All</string>
    <string name="order_now">Order Now</string>
    <string name="order_hint">Order</string>
    <string name="order">Add To Cart</string>
    <string name="view_cart">View My Cart</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="liked_meals">Liked Meals</string>
    <string name="liked_places">Liked Restaurants</string>
    <string name="liked_offers">Liked Offers</string>
    <string name="my_order">My Orders</string>
    <string name="next">Next</string>
    <string name="claim_now">Claim now</string>
    <string name="write_your_review">Write your review</string>
    <string name="add_images">Add images</string>
    <string name="add_comment">Write a comment</string>
    <string name="add_reply">Write a reply</string>
    <string name="tap_on_star">Tap on a star</string>
    <string name="image">Image</string>
    <string name="filter_by">Filter by</string>
    <string name="filter">Filter</string>
    <string name="show_distance">Show distance</string>
    <string name="followers">Followers</string>
    <string name="follower">Follower</string>
    <string name="expire">Expire </string>
    <string name="expire_on">Expire on</string>
    <string name="ends_on">Ends on </string>
    <string name="ended_on">Ended on </string>
    <string name="valid_till">Valid till</string>
    <string name="util_now">util now</string>
    <string name="days_left">Days left</string>
    <string name="claims">Claims</string>
    <string name="claim_offer">Claim offer</string>
    <string name="claimed">Claimed</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="read_terms_and_conditions">Read terms and condition</string>
    <string name="ask_pm">Ask place manager to enter offer PIN code below</string>
    <string name="discount">Discount</string>
    <string name="on_items">On Items</string>
    <string name="on_menu">On Menu</string>
    <string name="discount_on_items">Discount On Items</string>
    <string name="discount_on_menu">Discount On Menu</string>
    <string name="can_deliver">Can Deliver</string>
    <string name="active_now">Active Now</string>
    <string name="km">KM</string>
    <string name="free">Free</string>
    <string name="free_items">Free Items</string>
    <string name="items">Items</string>
    <string name="other_offers">Other place offers</string>
    <string name="other_offers_from">Other offers from</string>
    <string name="specific_offer">Specific time</string>
    <string name="no_results">No results found</string>
    <string name="most_followed">Most Followed</string>
    <string name="most_claimed">Most Claimed</string>
    <string name="newly_added">Newly Added</string>
    <string name="nearest">Nearest</string>
    <string name="need_account">You need an account to continue</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="login_success">Logged in successfully</string>
    <string name="added_to_cart">Offer has been successfully added to cart</string>
    <string name="sign_up_facebook">Continue with Facebook</string>
    <string name="sign_up_google">Continue with Google</string>
    <string name="discover_places">Discover Places</string>
    <string name="discover_returants">Discover Restaurants</string>
    <string name="order_tasty_food">Order tasty food</string>
    <string name="make_day_delicious">&amp; make your day delicious</string>
    <string name="all_ur_favs">All your favorites</string>
    <string name="delivers_to_you">Delivers to you</string>
    <string name="your_delivery_area">Your Delivery Area</string>
    <string name="delivering_area">Your Delivery Area</string>
    <string name="drag_the_map">Drag the map and put the pin on your exact delivery area</string>
    <string name="around_you_profile">Around you</string>
    <string name="around_you">Around you</string>
    <string name="comment_hint">Add a comment</string>
    <string name="have_account">Already have an account?</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="mobile_registered">Mobile Already Registered!</string>
    <string name="done">DONE</string>
    <string name="edit">EDIT</string>
    <string name="no_data">No match was found for the specified search criteria</string>
    <string name="not_available">Not Available</string>
    <string name="cart_not_available">Some items are not available. Please check your cart items and try again</string>
    <string name="ok">OK</string>
    <string name="not_supported_area_hint">We currently do not deliver here</string>
    <string name="not_supported_area">This area not supported Yet!</string>
    <string name="not_supported_area_message">The delivery address selected is currently not supported. Please select another address to deliver to</string>
    <string name="no_result_found">Sorry, no results found!</string>
    <string name="no_filtered_result">No results found matching your filters, try something  more general</string>
    <string name="no_comments_hint">No comments yet</string>
    <string name="first_comments_hint">Be the first to comment</string>
    <string name="chat_with_us">Chat with us on Messenger</string>
    <string name="need_hepls">Have something to say to Qurba ?</string>
    <string name="help_hint">Help</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="cancel">Cancel</string>
    <string name="no_offer_found">No offers matching selected filters to show</string>
    <string name="vote_hint">Vote to deliver to here</string>
    <string name="not_deliver_hint">does not deliver to</string>
    <string name="edit_location">Edit Location</string>
    <string name="choose_another_area">Choose another area</string>
    <string name="select_another_supported_area">Please select another address to deliver to</string>
    <string name="yes_start">Yes, Start</string>
    <string name="start_new_cart">Start a new cart?</string>
    <string name="update_now">Update Now</string>
    <string name="not_now">Not Now</string>
    <string name="new_version_brief">There is a new version available for download!</string>
    <string name="new_version_title">New Version Available</string>
</resources>