<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="-0.01"
            android:text="@string/new_version_title"
            android:id="@+id/title_tv"
            android:textColor="#212121"
            android:textSize="@dimen/_15ssp"
            android:textStyle="normal"
            tools:text="New Version Available" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif"
            android:id="@+id/content_tv"
            android:letterSpacing="-0.01"
            android:text="@string/new_version_brief"
            android:textColor="#212121"
            android:textSize="@dimen/_11ssp"
            android:textStyle="normal"
            tools:text="There is a new version available for download!" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25ssp"
            android:gravity="end"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:id="@+id/not_now_tv"
                android:letterSpacing="0.04"
                android:text="@string/not_now"
                android:textColor="#d0021b"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal"
                tools:text="Not Now" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:letterSpacing="0.04"
                android:id="@+id/update_now_tv"
                android:textColor="#d0021b"
                android:text="@string/update_now"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal"
                tools:text="Update Now" />
        </LinearLayout>
    </LinearLayout>
</layout>