<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:src="@mipmap/ic_allow_locatio"
            android:layout_height="@dimen/_60sdp">

        </ImageView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:lineSpacingExtra="2sp"
            android:gravity="center_horizontal"
            android:text="@string/not_supported_area"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            tools:text="This area not supported Yet!"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:text="@string/not_supported_area_message"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#6d7278"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="5.8sp"
            android:gravity="center_horizontal"
            tools:text="The delivery address selected is currently not supported. Please select another address to deliver to" />

        <TextView
            android:layout_width="@dimen/_117sdp"
            android:layout_height="@dimen/_28sdp"
            android:text="@string/edit_location"
            android:id="@+id/edit_location_tv"
            android:letterSpacing="-0.05"
            android:textAllCaps="true"
            android:textSize="@dimen/_11ssp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_card"
            android:backgroundTint="#e02020"
            android:lineSpacingExtra="0.8sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:gravity="center"
            tools:text="Edit Location"
            />
    </LinearLayout>
</layout>