<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp"
        android:background="@drawable/rounded_corners"
        android:layout_margin="@dimen/_16sdp">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="#212121"
            android:letterSpacing="-0.01"
            android:text="@string/start_new_cart" />

        <TextView
            android:id="@+id/message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#212121"
            android:layout_marginTop="@dimen/_12sdp"
            android:letterSpacing="-0.01"
            tools:text="You already have items in your cart from “PICKNGO”, do you want to clear cart and start a new order?" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cancel_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="#d0021b"
                android:letterSpacing="0.04"
                android:gravity="center_horizontal"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/start_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="#d0021b"
                android:layout_marginStart="@dimen/_20sdp"
                android:letterSpacing="0.04"
                android:gravity="center_horizontal"
                android:text="@string/yes_start" />

        </LinearLayout>
    </LinearLayout>
</layout>